Refactored FileService to use FileStorageService
Replaces direct storage logic and Backblaze B2 integration with a FileStorageService abstraction. Simplifies file upload, download and deletion methods, improves error handling and updates DTO usage for responses. This refactor enhances maintainability and decouples storage implementation from business logic